# MultiCompSlopesInterpolation

./: .gitignore  README.md  environment.yml  install_env.sh  pyproject.toml  setup.py
config/: Interpolation_GOM_exp1.yaml  Interpolation_Ove_exp1.yaml
data/: gom_data.npz
mcslopes/: nmoinv.py  nmoinv3D.py  nmoinv3d.py  plotting.py  preprocessing.py  slopes.py  visual.py
notebooks/gom/: Create_data.ipynb
notebooks/others/: NMO_gradient.ipynb  Slopes_comparison_hyperbolic.ipynb
notebooks/overthrust3d/: Create_data.ipynb  Derivativechecking_Ove3D.ipynb
notebooks/slopes/: Slopes_comparison_hyperbolic.ipynb
scripts/2d/: Interpolation_GOM.sh  Interpolation_slopes.py
scripts/3d/: Interpolation_Ove.sh  Interpolation_slopes.py
scripts/gom/: Interpolation_GOM.sh  Interpolation_slopes.py
