[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcslopes"
authors = [
    {name = "Matteo Ravasi", email = "matteo.ravasi@kaust.edu.sa"},
]
description = "Slope estimation and interpolation of multi-channel seismic data."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inverse problems", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
    "numpy >= 1.15.0",
    "pylops >= 2.0.0",
 	"setuptools >= 61.2.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
